<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.4</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.thaca</groupId>
    <artifactId>thaca-framework</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>thaca-framework</name>
    <description>Thaca Framework Parent</description>

    <properties>
        <java.version>21</java.version>
        <aop-version>3.5.11</aop-version>
        <java-jwt-version>4.5.1</java-jwt-version>
		    <apache-commons-version>3.20.0</apache-commons-version>
        <redisson-version>4.1.0</redisson-version>
        <dotenv-version>4.0.0</dotenv-version>
        <jwt-version>0.12.6</jwt-version>
    </properties>

    <modules>
        <module>framework-core</module>
        <module>framework-blocking-starter</module>
        <module>framework-reactive-starter</module>
    </modules>

</project>
